--- a/flask2/templates/neweval.html
+++ b/flask2/templates/neweval.html
@@ -56,7 +56,7 @@
 
 
 {% block body %}
-<!--<button id="accelPermsButton" onclick="getAccel()">Get Accel</button>-->
+<button id="accelPermsButton" onclick="getAccel()">Get Accel</button>
 
 <div id="main">
     <canvas hidden id="eyecache"></canvas>
