added head pose gestures

--- a/flask2/templates/neweval.html
+++ b/flask2/templates/neweval.html
@@ -6,7 +6,9 @@
 
 
 <!-- Tensorflow core, model, and backend-->
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.7.0/dist/tf.min.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>
 
 <!-- Javascript specific to this page -->
@@ -21,12 +23,11 @@
 <script src="{{url_for('static', filename='mlweb.js')}}"></script>
 
 <script>
-    // main();
+    main();
     showPredictDot = false;
 
     // Wait until after the body loads before adding elements to it.
     document.addEventListener("DOMContentLoaded", function(event) {
-        // zooSelect({{ zooNum }});
         newEvalGrid();
     })
 
