added eye tracking segments and replaced nonlocal tfjs

--- a/flask2/templates/eval.html
+++ b/flask2/templates/eval.html
@@ -2,7 +2,10 @@
 
 {% block headextra %}
 <!-- Tensorflow core, model, and backend-->
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>-->
+<!-- TFjs version 2.7 local-->
+<script src="{{url_for('static', filename='tf.min.js')}}"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>
 
 <!-- Javascript specific to this page -->
