--- a/flask2/templates/datacollection.html
+++ b/flask2/templates/datacollection.html
@@ -30,7 +30,10 @@
 </script>
 
             <!--Tensorflow javascript import-->
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>-->
+<!-- TFjs version 2.7 local-->
+<script src="{{url_for('static', filename='tf.min.js')}}"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>
 
 <script src="{{url_for('static', filename='ML.js')}}"></script>
