added display to end of trial

--- a/flask2/templates/neweval.html
+++ b/flask2/templates/neweval.html
@@ -66,6 +66,8 @@
 {% block body %}
 <button id="accelPermsButton" style="position:absolute; top:50%; left: 50%" onclick="getAccel()">Get Accel</button>
 
+<h3 id="trialdisplay" hidden></h3>
+
 <div id="main">
     <canvas hidden id="eyecache"></canvas>
     <video hidden autoplay muted playsinline id="video"  style="
