--- a/flask2/templates/neweval.html
+++ b/flask2/templates/neweval.html
@@ -2,6 +2,7 @@
 
 {% block headextra %}
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+<!--<meta name="viewport" content="initial-scale=1.0, user-scalable=0">-->
 <meta name="apple-mobile-web-app-capable" content="yes">
 
 <!-- Tensorflow core, model, and backend-->
@@ -73,7 +74,19 @@
 
 
 {% block body %}
-<button id="accelPermsButton" style="position:absolute; top:50%; left: 50%" onclick="getAccel()">Get Accel</button>
+<p id="evalinstructions" style="text-align:center">
+        Please press "Allow" for for both Device Accelerometer and Webcam access.
+        <br>
+
+        Loading...
+</p>
+
+<div id="accelbuttonholder" style="width:100%; height:100%; display: flex; justify-content: center; align-items: center;">
+
+    <br>
+
+    <button id="accelPermsButton" onclick="getAccel()">Get Accel</button>
+</div>
 
 <h3 hidden id="trialdisplay" style="text-align:center;"></h3>
 
