--- a/flask2/templates/neweval.html
+++ b/flask2/templates/neweval.html
@@ -75,10 +75,9 @@
 
 {% block body %}
 <p id="evalinstructions" style="text-align:center">
-        Please press "Allow" for for both Device Accelerometer and Webcam access.
-        <br>
-
         Loading...
+        <br><br>
+        Please press "Allow" for for both Device Accelerometer and Webcam access to begin.
 </p>
 
 <div id="accelbuttonholder" style="width:100%; height:100%; display: flex; justify-content: center; align-items: center;">
