--- a/flask2/templates/neweval.html
+++ b/flask2/templates/neweval.html
@@ -54,9 +54,23 @@
     }
 
     .wackdivtext{
+
+        text-align: center;
+        top: 50%;
         position:relative;
+
+
+
+        /*
+        position: absolute;
+        text-align: center;
+        padding-top:50%;
+                transform: translate(-50%, -50%);
+
         top: 50%;
         left: 50%;
+        position:relative;
+        */
     }
 
     .galleryContainer {
