--- a/flask2/templates/neweval.html
+++ b/flask2/templates/neweval.html
@@ -49,14 +49,18 @@
         width: 49%;
         height: 24%;
         margin:0.5%;
+        align-items: center;
 
         display: inline-block;
+
     }
 
     .wackdivtext{
         text-align: center;
-        top: 50%;
-        position:relative;
+        line-height: 100%;
+
+        top: 45%;
+        position: relative;
     }
 
     .galleryContainer {
