--- a/flask2/templates/main.html
+++ b/flask2/templates/main.html
@@ -30,7 +30,11 @@
             elem.style.backgroundColor = "pink";
         } else {
             // elem.innerText = "Personalized Model Found <br> Click to start evaluation";
-            elem.innerHTML = "Personalized Model Found <br><a href='/eval/'>Click here to start evaluation</a>";
+            elem.innerHTML = `Personalized Model Found <br> 
+            <a href='/grideval/?name=grid1' target="_blank">Grid Eval 1</a> <br>
+            <a href='/grideval/?name=grid2' target="_blank">Grid Eval 2</a> <br>
+            <a href='/listeval/?name=list1' target="_blank">List Eval 1</a> <br>
+            <a href='/listeval/?name=list2' target="_blank">List Eval 2</a> <br>`;
             elem.style.backgroundColor = "lightgreen";
         }
     }
