added angular accel to the demo, casing on that to decide gestures. Also upped the threshold for front flicks so hopefully that should be less confused now.

--- a/flask2/templates/accel.html
+++ b/flask2/templates/accel.html
@@ -13,6 +13,9 @@
     <p id="accelPerms"></p>
 
     <h2 id="curOrientation"></h2>
+    <br>
+    <h2 id="curRotRate"></h2>
+
     <h2 id="dotLocation"></h2>
 
     <div class="predicdot" style="left:-10%; top:-10%;"></div>
