--- a/flask2/templates/accel.html
+++ b/flask2/templates/accel.html
@@ -12,6 +12,8 @@
     <br>
     <p id="accelPerms"></p>
 
+    <h2 id="curAccRate"></h2>
+    <br>
     <h2 id="curOrientation"></h2>
     <br>
     <h2 id="curRotRate"></h2>
