confirmed default svr working.

--- a/flask2/templates/main.html
+++ b/flask2/templates/main.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block headextra %}
-<meta name="viewport" content="initial-scale=1.0;" />
+<meta name="viewport" content="initial-scale=1.0" />
 
 <!--Other ML library-->
 <!--<script src="http://mlweb.loria.fr/ml.js"></script>-->
@@ -26,7 +26,9 @@
 
         regModel = localStorage['svr_x'];
         if (regModel == undefined || regModel.length == 0){
-            elem.innerText = "Personalized Model Not Found";
+            elem.innerText = "Personalized Model Not Found <br>
+            <a href='/grideval/?name=grid1' target="_blank">Start Anyway</a> <br>
+            ";
             elem.style.backgroundColor = "pink";
         } else {
             // elem.innerText = "Personalized Model Found <br> Click to start evaluation";
@@ -65,7 +67,7 @@
     }
 
     body, html {
-      width: 100%;
+      width: 99%;
       height: 100%;
       margin: 0;
     }
