checked that the new calibration works, removed the deletion of the

--- a/flask2/templates/datacollection.html
+++ b/flask2/templates/datacollection.html
@@ -66,6 +66,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>
 
 <script src="{{url_for('static', filename='ML.js')}}"></script>
+<script src="{{url_for('static', filename='fileIO.js')}}"></script>
 <script src="{{url_for('static', filename='mainTesting.js')}}"></script>
 <script src="{{url_for('static', filename='collectioncolor.js')}}"></script>
 <script src="{{url_for('static', filename='datacollect_p5_pipeline.js')}}"></script>
