--- a/flask2/templates/blockresults.html
+++ b/flask2/templates/blockresults.html
@@ -4,6 +4,8 @@
 
 <script src="{{url_for('static', filename='fileIO.js')}}"></script>
 <script>
+
+    var outEval;
     var gestureNames = ["Forward flick", "Right flick", "Right tilt", "Left flick", "Left tilt", "Pull close", "Push away", "Turn to right", "Turn to left"];
     var keys = ["grid1_results", "grid2_results", "list1_results", "list2_results"];
 
@@ -11,8 +13,10 @@
         a = confirm("Clicking OK will clear ALL trials of your evaluation data for this key (" + resKey + ") only! Only do this if there's been an error or you've already exported the data.");
         if (a){
             console.log("cleared evaluation results and block order of " + resKey + " from localstorage");
-            localStorage.removeItem(resKey);
-            localStorage.removeItem(resKey.slice(0,5) + "_blockorder");
+            // localStorage.removeItem(resKey);
+            // localStorage.removeItem(resKey.slice(0,5) + "_blockorder");
+            ldb.set(resKey, null);
+            ldb.set(resKey.slice(0,5) + "_blockorder", null);
             location.reload();
         }
     }
@@ -23,8 +27,10 @@
             for (let i = 0; i < 4; i++){
                 let tmpkey = keys[i];
                 console.log("cleared evaluation results and block order of " + tmpkey + " from localstorage");
-                localStorage.removeItem(tmpkey);
-                localStorage.removeItem(tmpkey.slice(0,5) + "_blockorder");
+                ldb.set(tmpkey, null);
+                ldb.set(tmpkey.slice(0,5) + "_blockorder", null);
+                // localStorage.removeItem(tmpkey);
+                // localStorage.removeItem(tmpkey.slice(0,5) + "_blockorder");
 
             }
             location.reload();
@@ -32,15 +38,17 @@
     }
 
     function checkDownloadResultsALL(){
-        downloadResultsManyKeys(keys);
+        downloadResultsManyLSDB(keys);
     }
 
     function checkDownloadResults(resKey){
-        if (localStorage[resKey] == "undefined"){
-             alert("No eval results to download");
-        } else {
-            downloadResultsFromKey(resKey)
-        }
+    	ldb.get(resKey, function (value) {
+		  if (!value){
+		  	alert("no eval results to download")
+		  } else{
+		  	downloadResultsFromLSDB(resKey)
+		  }
+		});
     }
 
     var average = (array) => array.reduce((a, b) => a + b) / array.length;
@@ -62,153 +70,162 @@
 
             console.log("showing results for ", resultsKey)
 
-            if (typeof(localStorage[resultsKey]) == "undefined" || localStorage[resultsKey] == undefined || localStorage[resultsKey] == "undefined"){
-                tmp = document.createElement("div");
-                tmp.innerHTML = "No evaluation results to show for key " + resultsKey;
-                resultsDiv.append(tmp);
-            } else{
-                var evalResults = JSON.parse(localStorage[resultsKey]);
-                evalResults = evalResults.flat();
-
-                    // Table and Table header
-                resultsTable = document.createElement("table");
-                resultsTable.style.border = "1px solid black";
-                resultsTable.style.textAlign = "center";
-                resultsTable.style.padding = "0.5em";
-
-                
-
-                let thead = resultsTable.createTHead();
-                let row = thead.insertRow()
-                for (let header of ["Timestamp", "Gesture (target, predicted)", "Screen section (target, predicted)", "Redo Block"]){
-                    let th = document.createElement("th");
-                    th.style.padding = "0.5em";
-                    th.style.border = "1px solid black";
-                    th.innerHTML = header;
-                    row.appendChild(th);
-                }
-
-            //    document.body.append(resultsTable); // debug
-
-                // Populate results table
-                let correctGest = 0;
-                let correctSeg = 0;
-                let totals = evalResults.length;
-
-                let segmentCount = 0;
-                let segmentsPerBlock;
-                if (resultsType == "grid"){
-                    segmentsPerBlock = 8;
-                } else{
-                    segmentsPerBlock = 6;
-                }
-
-
-                evalResults.forEach((elem, ind) => {
-                    let gestNum;
-                    if (Array.isArray(elem)){
-                        // elem format is [d.getTime(), [detectedgesture, detectedsegment], [targetgesture, targetsegment]]
-                        // Get the numbers out of the elem
-                        let dateInMillis = elem[0];
-                        let detected = elem[1];
-                        let target = elem[2];
-                        gestNum = elem[2][0]; // Target gesture number
-                        // console.log("parsed", elem);
-
-                        // Add to results
-                        if (detected[0] == target[0]){correctGest += 1;}
-                        if (detected[1] == target[1]){correctSeg += 1;}
-
-                        // Create new row and add three cells
-                        row = resultsTable.insertRow();
-
-                            // Date
-                        cell = row.insertCell();
-                        date = new Date(dateInMillis);
-                        cell.innerHTML = date.toLocaleTimeString() + ", " + date.toDateString();
-                            // Gesture and Segment
-                        for (i in [0,1]){
-                            cell = row.insertCell();
-                            tmpspan = document.createElement("span");
-                            if (target[i] == detected[i]){
-                                tmpspan.style.color = "blue";
-                            } else{
-                                tmpspan.style.color = "red";
-                            }
-                            tmpspan.innerText = target[i] + ", " + detected[i];
-                            cell.append(tmpspan)
-                        }
-                    } else{
-                        // Create new row with dummy cells
-                        row = resultsTable.insertRow();
-
-                        for (i in [0,1,2]){
-                            cell = row.insertCell();
-                            cell.innerHTML = "Incomplete"
-                        }
-                        gestNum = -1;
+            // if (typeof(localStorage[resultsKey]) == "undefined" || localStorage[resultsKey] == undefined || localStorage[resultsKey] == "undefined"){
+            //     tmp = document.createElement("div");
+            //     tmp.innerHTML = "No evaluation results to show for key " + resultsKey;
+            //     resultsDiv.append(tmp);
+            // } else{
+        	ldb.get(resultsKey, function (evalResults) {
+			    if (typeof(evalResults) == "undefined" || !evalResults){
+			    	tmp = document.createElement("div");
+	                tmp.innerHTML = "No evaluation results to show for key " + resultsKey;
+	                resultsDiv.append(tmp);
+			    } else{
+                    // Debug
+                    if (j == 0){
+                        outEval = evalResults;
                     }
-                        // Add the side column if we're in a new block
-                    if ((segmentCount % segmentsPerBlock) == 0){
-                        cell = row.insertCell();
-                        cell.rowSpan = segmentsPerBlock;
-                        let blockNum = Math.trunc(segmentCount/segmentsPerBlock);
-                        let tmpLink = document.createElement("a");
-                        tmpLink.target = "_blank"; 
-                        tmpLink.href = "../" + resultsType + "eval/?name=" + resultsName + "&block=" + blockNum;
-                        if (gestNum != -1){
-                            tmpLink.innerHTML = gestureNames[gestNum];
-                        } else {
-                            tmpLink.innerHTML = "Start block"
-                        }
-                        // cell.innerHTML = blockNum + 1;
-                        cell.append(tmpLink);
-                    }
-                    segmentCount += 1;
-                });
+                    
+                    evalResults = JSON.parse(evalResults);
+			    	evalResults = evalResults.flat();
+			    	                    // Table and Table header
+	                resultsTable = document.createElement("table");
+	                resultsTable.style.border = "1px solid black";
+	                resultsTable.style.textAlign = "center";
+	                resultsTable.style.padding = "0.5em";
 
-                // Add download and delete buttons to each header
-                let tmpbut1 = document.createElement("button");
-                tmpbut1.addEventListener('click', function(){
-                    checkDownloadResults(resultsKey);
-                });
-                tmpbut1.style.height = "40px";
-                tmpbut1.innerHTML = "Download Results";
+	                let thead = resultsTable.createTHead();
+	                let row = thead.insertRow()
+	                for (let header of ["Timestamp", "Gesture (target, predicted)", "Screen section (target, predicted)", "Redo Block"]){
+	                    let th = document.createElement("th");
+	                    th.style.padding = "0.5em";
+	                    th.style.border = "1px solid black";
+	                    th.innerHTML = header;
+	                    row.appendChild(th);
+	                }
 
+	            //    document.body.append(resultsTable); // debug
 
-                let tmpbut2 = document.createElement("button")
-                tmpbut2.addEventListener('click', function(){
-                    clearResultsKey(resultsKey);
-                });
-                tmpbut2.style.height = "20px";
-                tmpbut2.style.marginLeft = "50%";
-                tmpbut2.style.backgroundColor = "lightcoral";
-                tmpbut2.innerHTML = "Clear Results";
+	                // Populate results table
+	                let correctGest = 0;
+	                let correctSeg = 0;
+	                let totals = evalResults.length;
+
+	                let segmentCount = 0;
+	                let segmentsPerBlock;
+	                if (resultsType == "grid"){
+	                    segmentsPerBlock = 8;
+	                } else{
+	                    segmentsPerBlock = 6;
+	                }
 
 
-                
+	                evalResults.forEach((elem, ind) => {
+	                    let gestNum;
+	                    if (Array.isArray(elem)){
+	                        // elem format is [d.getTime(), [detectedgesture, detectedsegment], [targetgesture, targetsegment]]
+	                        // Get the numbers out of the elem
+	                        let dateInMillis = elem[0];
+	                        let detected = elem[1];
+	                        let target = elem[2];
+	                        gestNum = elem[2][0]; // Target gesture number
+	                        // console.log("parsed", elem);
 
-                // Add statistics to bottom, after table
-                finalStats = document.createElement("p");
-                finalStats.innerHTML += "<hr><h2>Results for key \"" + resultsKey + "\"</h2>";
-                // finalStats.append(tmpbut1);
-                // finalStats.innerHTML += "&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;"; // Create space between buttons
-                // finalStats.append(tmpbut2);
-                // finalStats.innerHTML += "<br>";
+	                        // Add to results
+	                        if (detected[0] == target[0]){correctGest += 1;}
+	                        if (detected[1] == target[1]){correctSeg += 1;}
 
-                // Add rest of stats
-                finalStats.innerHTML += "Gestures correct: " + correctGest + "/" + totals + " = " + (100*correctGest/totals).toFixed(1) + "%";
-                finalStats.innerHTML += "<br>Screen sections correct: " + correctSeg + "/" + totals + " = " + (100*correctSeg/totals).toFixed(1) + "%";
-                finalStats.innerHTML += "<br>Overall: " + (100*correctSeg/totals).toFixed(1) + "*" + (100*correctGest/totals).toFixed(1) + " = " + (100*(correctGest*correctSeg)/totals/totals).toFixed(1) + "%";
+	                        // Create new row and add three cells
+	                        row = resultsTable.insertRow();
 
-                // Add results to document body
-                resultsDiv.append(finalStats);
-                resultsDiv.append(tmpbut1);
-                resultsDiv.append(tmpbut2);
-                resultsDiv.append(resultsTable);
-                // document.body.append(resultsDiv);
+	                            // Date
+	                        cell = row.insertCell();
+	                        date = new Date(dateInMillis);
+	                        cell.innerHTML = date.toLocaleTimeString() + ", " + date.toDateString();
+	                            // Gesture and Segment
+	                        for (i in [0,1]){
+	                            cell = row.insertCell();
+	                            tmpspan = document.createElement("span");
+	                            if (target[i] == detected[i]){
+	                                tmpspan.style.color = "blue";
+	                            } else{
+	                                tmpspan.style.color = "red";
+	                            }
+	                            tmpspan.innerText = target[i] + ", " + detected[i];
+	                            cell.append(tmpspan)
+	                        }
+	                    } else{
+	                        // Create new row with dummy cells
+	                        row = resultsTable.insertRow();
+
+	                        for (i in [0,1,2]){
+	                            cell = row.insertCell();
+	                            cell.innerHTML = "Incomplete"
+	                        }
+	                        gestNum = -1;
+	                    }
+	                        // Add the side column if we're in a new block
+	                    if ((segmentCount % segmentsPerBlock) == 0){
+	                        cell = row.insertCell();
+	                        cell.rowSpan = segmentsPerBlock;
+	                        let blockNum = Math.trunc(segmentCount/segmentsPerBlock);
+	                        let tmpLink = document.createElement("a");
+	                        tmpLink.target = "_blank"; 
+	                        tmpLink.href = "../" + resultsType + "eval/?name=" + resultsName + "&block=" + blockNum;
+	                        if (gestNum != -1){
+	                            tmpLink.innerHTML = gestureNames[gestNum];
+	                        } else {
+	                            tmpLink.innerHTML = "Start block"
+	                        }
+	                        // cell.innerHTML = blockNum + 1;
+	                        cell.append(tmpLink);
+	                    }
+	                    segmentCount += 1;
+	                });
+
+	                // Add download and delete buttons to each header
+	                let tmpbut1 = document.createElement("button");
+	                tmpbut1.addEventListener('click', function(){
+	                    checkDownloadResults(resultsKey);
+	                });
+	                tmpbut1.style.height = "40px";
+	                tmpbut1.innerHTML = "Download Results";
+
+
+	                let tmpbut2 = document.createElement("button")
+	                tmpbut2.addEventListener('click', function(){
+	                    clearResultsKey(resultsKey);
+	                });
+	                tmpbut2.style.height = "20px";
+	                tmpbut2.style.marginLeft = "50%";
+	                tmpbut2.style.backgroundColor = "lightcoral";
+	                tmpbut2.innerHTML = "Clear Results";
+
+
+	                
+
+	                // Add statistics to bottom, after table
+	                finalStats = document.createElement("p");
+	                finalStats.innerHTML += "<hr><h2>Results for key \"" + resultsKey + "\"</h2>";
+	                // finalStats.append(tmpbut1);
+	                // finalStats.innerHTML += "&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;"; // Create space between buttons
+	                // finalStats.append(tmpbut2);
+	                // finalStats.innerHTML += "<br>";
+
+	                // Add rest of stats
+	                finalStats.innerHTML += "Gestures correct: " + correctGest + "/" + totals + " = " + (100*correctGest/totals).toFixed(1) + "%";
+	                finalStats.innerHTML += "<br>Screen sections correct: " + correctSeg + "/" + totals + " = " + (100*correctSeg/totals).toFixed(1) + "%";
+	                finalStats.innerHTML += "<br>Overall: " + (100*correctSeg/totals).toFixed(1) + "*" + (100*correctGest/totals).toFixed(1) + " = " + (100*(correctGest*correctSeg)/totals/totals).toFixed(1) + "%";
+
+	                // Add results to document body
+	                resultsDiv.append(finalStats);
+	                resultsDiv.append(tmpbut1);
+	                resultsDiv.append(tmpbut2);
+	                resultsDiv.append(resultsTable);
+			    }
+			});
             }
-        }
+        
         document.body.append(resultsDiv);
     });
 </script>
