added 3rd eval set

--- a/flask2/templates/main.html
+++ b/flask2/templates/main.html
@@ -34,8 +34,10 @@
             elem.innerHTML = `Personalized Model Found <br> 
             <a href='/grideval/?name=grid1' target="_blank">Grid Eval 1</a> <br>
             <a href='/grideval/?name=grid2' target="_blank">Grid Eval 2</a> <br>
+            <a href='/grideval/?name=grid3' target="_blank">Grid Eval 3</a> <br>
             <a href='/listeval/?name=list1' target="_blank">List Eval 1</a> <br>
             <a href='/listeval/?name=list2' target="_blank">List Eval 2</a> <br>`;
+            <a href='/listeval/?name=list3' target="_blank">List Eval 3</a> <br>`;
             elem.style.backgroundColor = "lightgreen";
         }
     }
