--- a/flask2/templates/blockresults.html
+++ b/flask2/templates/blockresults.html
@@ -24,7 +24,7 @@
     function clearResultsALL(){
         a = confirm("Clicking OK will clear ALL trials of your evaluation data across ALL KEYS! Only do this if there's been an error or you've already exported the data.");
         if (a){
-            for (let i = 0; i < 4; i++){
+            for (let i = 0; i < keys.length; i++){
                 let tmpkey = keys[i];
                 console.log("cleared evaluation results and block order of " + tmpkey + " from localstorage");
                 ldb.set(tmpkey, null);
@@ -63,7 +63,7 @@
         resultsDiv.innerHTML += "<span style='color:blue;'>Blue</span> is matched, <span style='color:red;'>Red</span> is mismatched";
         // resultsDiv.innerHTML += "<hr>";
 
-        for (let j = 0; j < 4; j++){
+        for (let j = 0; j < keys.length; j++){
             let resultsKey = keys[j];
             let resultsType = resultsKey.slice(0,4);
             let resultsName = resultsKey.slice(0,5);
