added 4 user studies

--- a/flask2/templates/datacollection.html
+++ b/flask2/templates/datacollection.html
@@ -121,7 +121,9 @@
 
 
         <br><br>
+<!--        <canvas id="eyecache"></canvas>-->
         <canvas hidden id="eyecache"></canvas>
+
 
 
     </div>
