--- a/flask2/templates/notificationsdemo.html
+++ b/flask2/templates/notificationsdemo.html
@@ -16,6 +16,7 @@
 <script src="{{url_for('static', filename='accel.js')}}"></script>
 <script src="{{url_for('static', filename='svr.js')}}"></script>
 <script src="{{url_for('static', filename='collectioncolor.js')}}"></script>
+<script src="{{url_for('static', filename='livegestandgaze.js')}}"></script>
 <script src="{{url_for('static', filename='notificationsdemo.js')}}"></script>
 
 
@@ -42,10 +43,72 @@
         margin: 10px;
         left: 0;
 
+        border: 2px solid #ffffff;
 
         animation: slideintop .7s;
         animation-timing-function: cubic-bezier(.35,1.29,.64,1);
         animation-fill-mode: forwards;
+
+        transition: all 0.2s ease;
+    }
+
+    .top_notif:focus{
+        border: 2px solid #2222dd;
+        transition: all 0.2s ease;
+    }
+
+
+
+    .fullApp {
+        border-radius: 20px;
+        margin: 1px;
+        left: 0px;
+
+        z-index: 3;
+        /*animation: slideinbottom .5s;*/
+        animation: bloomImage .2s;
+        animation-timing-function: linear;
+        animation-fill-mode: forwards;
+    }
+
+
+    @keyframes bloomImage{
+        from{
+            transform: translate(50%, 10%);
+            transform: scale(0.1);
+        }
+        to {
+            transform: translate(0%, 0%);
+            transform: scale(1);
+        }
+    }
+
+    @keyframes unbloomImage{
+        from {
+            transform: translate(0%, 0%);
+            transform: scale(1);
+        }
+        to{
+            transform: translate(50%, 50%);
+            transform: scale(0);
+        }
+    }
+
+
+
+
+    @keyframes slideinbottom{
+        from{
+            transform: translate(0px, 800px);
+            opacity: 0;
+        }
+    }
+
+    @keyframes slideoutbottom{
+        to{
+            transform: translate(0px, 800px);
+            opacity: 0;
+        }
     }
 
     @keyframes slideoutleft{
@@ -55,18 +118,29 @@
         }
     }
 
+    @keyframes slideoutright{
+        from{
+            transform: translate(0px, -110px);
+        }
+        to{
+            transform: translate(600px, -110px);
+            opacity: 0;
+        }
+    }
+
     @keyframes slideup{
         to{
-            transform: translate(0px, -89px);
+            transform: translate(0px, -110px);
         }
     }
 
 
     @keyframes slideintop {
         from {
-            transform: translate(0px, -100px) ;
+            transform: translate(0px, -200px) ;
         }
     }
+
 
 </style>
 
