started building email demo

--- a/flask2/templates/notificationsdemo.html
+++ b/flask2/templates/notificationsdemo.html
@@ -67,7 +67,8 @@
         z-index: 3;
         /*animation: slideinbottom .5s;*/
         animation: bloomImage .2s;
-        animation-timing-function: linear;
+        /*animation-timing-function: linear;*/
+        animation-timing-function: cubic-bezier(.35,1.29,.64,1)
         animation-fill-mode: forwards;
     }
 
