--- a/flask2/templates/emaildemo.html
+++ b/flask2/templates/emaildemo.html
@@ -1,154 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+{% extends "base.html" %}
 
-
-
-    <title>GAZEL</title>
-
-<!-- For drawing the predicted output directly onto the HTML page with an icon-->
-<!-- CSS comments are not //, and if you put them in the <style> header they break it -->
-    <style>
-    .placeholderdot{
-        width: 30px;
-        height: 30px;
-        background-color: #ffab56;
-        border-radius: 50%;
-        position:fixed;
-    }
-
-    .targetdot{
-        width: 60px;
-        height: 60px;
-        background-color: #0e5cab;
-        border-radius: 50%;
-        position:fixed;
-    }
-
-    .predicdot{
-        width: 30px;
-        height: 30px;
-        background-color: #ffab56;
-        border-radius: 50%;
-        position:fixed;
-    }
-
-    .evalTarget{
-        width: 15px;
-        height: 15px;
-        border-radius: 50%;
-        position:fixed;
-        transform: translate(-50%, -50%);
-    }
-
-    .onscreenregion{
-        position:fixed;
-        background-color:#00003010;
-        left: 0px;
-        top: 0px;
-        right:100px;
-        bottom:100px;
-    }
-
-
-    .widebutton {
-        display: block;
-        width: 100%;
-        border: none;
-        background-color: #CCC;
-        padding: 14px 28px;
-        font-size: 16px;
-        cursor: pointer;
-        text-align: center;
-    }
-
-    hr {
-        background-color:#ccc;
-        height:1px;
-        border:none;
-    }
-    </style>
-
-    <!--  Style for eval: grid and list   -->
-    <style>
-    .griddiv {
-        width: 49%;
-        height: 24%;
-        margin:0.5%;
-        align-items: center;
-
-        display: inline-block;
-    }
-
-    .griddivtext{
-        text-align: center;
-        line-height: 100%;
-        font-size: 0.8em;
-
-        top: calc(50% - 1em);
-        position: relative;
-    }
-
-    .listdiv {
-        width: 99%;
-        height: calc((100% - 3%)/6);
-        margin: 0.5%;
-        align-items: center;
-
-        display: inline-block;
-    }
-
-    .listdivtext{
-        text-align: center;
-        line-height: 100%;
-        font-size: 0.8em;
-
-        top: calc(50% - 0.5em);
-        position: relative;
-    }
-
-
-    .galleryContainer {
-        height:100%;
-        width: 100%;
-        line-height: 0px;
-        align-item: center;
-        position: relative;
-
-        overflow: hidden;
-    }
-    </style>
-
-    <!--  Style for results display -->
-    <style>
-        table,td {
-            border: 1px solid black;
-        }
-    </style>
-
-    
+{% block headextra %}
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="apple-mobile-web-app-capable" content="yes">
 
 <!-- Tensorflow core, model, and backend-->
 <!--<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>-->
 <!-- TFjs version 2.7 local-->
-<script src="/static/tf.min.js"></script>
+<script src="{{url_for('static', filename='tf.min.js')}}"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>
 
 <!-- Javascript specific to this page -->
-<script src="/static/ML.js"></script>
-<script src="/static/accel.js"></script>
-<script src="/static/svr.js"></script>
-<script src="/static/collectioncolor.js"></script>
-<script src="/static/livegestandgaze.js"></script>
-<script src="/static/notificationsdemo.js"></script>
+<script src="{{url_for('static', filename='ML.js')}}"></script>
+<script src="{{url_for('static', filename='accel.js')}}"></script>
+<script src="{{url_for('static', filename='svr.js')}}"></script>
+<script src="{{url_for('static', filename='collectioncolor.js')}}"></script>
+<script src="{{url_for('static', filename='livegestandgaze.js')}}"></script>
+<script src="{{url_for('static', filename='emaildemo.js')}}"></script>
 
 
 <!--Other ML library-->
-<script src="/static/mlweb.js"></script>
+<script src="{{url_for('static', filename='mlweb.js')}}"></script>
 <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 
 <script>
@@ -157,9 +30,7 @@
 
     // Wait until after the body loads before adding elements to it.
     document.addEventListener("DOMContentLoaded", function(event) {
-        // document.getElementById('accelbuttonholder').remove();
-        // let myp5 = new p5(s);
-        notifStarter();
+        emailStarter();
     })
 
 </script>
@@ -271,10 +142,10 @@
 
 </style>
 
+{% endblock %}
 
-</head>
-<body style="background-color:aliceblue; font-family: Verdana, sans-serif;">
 
+{% block body %}
 <div id="accelbuttonholder" style="width:100%; height:100%; display: flex; justify-content: center; align-items: center;">
 
     <br>
@@ -296,6 +167,4 @@
               "></video>
 
 </div>
-
-</body>
-</html>
+{% endblock %}
