--- a/flask2/templates/emaildemo.html
+++ b/flask2/templates/emaildemo.html
@@ -119,17 +119,17 @@
 
     @keyframes slideoutright{
         from{
-            transform: translate(0px, -110px);
+            transform: translate(0px);
         }
         to{
-            transform: translate(600px, -110px);
+            transform: translate(600px);
             opacity: 0;
         }
     }
 
     @keyframes slideup{
         to{
-            transform: translate(0px, -110px);
+            transform: translate(0px, -94px);
         }
     }
 
