--- a/flask2/templates/svreyesonly.html
+++ b/flask2/templates/svreyesonly.html
@@ -12,7 +12,7 @@
 <!-- Javascript specific to this page -->
 <script src="{{url_for('static', filename='ML.js')}}"></script>
 <script src="{{url_for('static', filename='fileIO.js')}}"></script>
-<script src="{{url_for('static', filename='svr.js')}}"></script>
+<script src="{{url_for('static', filename='svreyesonly.js')}}"></script>
 <script src="{{url_for('static', filename='collectioncolor.js')}}"></script>
 <script src="{{url_for('static', filename='accel.js')}}"></script>
 <!--<script src="{{url_for('static', filename='livetest.js')}}"></script>-->
