gestures finalized, changes to debug

--- a/flask2/templates/gesturepractice.html
+++ b/flask2/templates/gesturepractice.html
@@ -87,7 +87,7 @@
     <button id="accelPermsButton" onclick="getAccel()">Get Accel</button>
 </div>
 
-<h3 hidden id="trialdisplay" style="text-align:center;"></h3>
+<h3 hidden id="trialdisplay" style="text-align:center; font-size: 2.5em;"></h3>
 
 <div id="main">
     <canvas hidden id="eyecache"></canvas>
