--- a/flask2/templates/zoo.html
+++ b/flask2/templates/zoo.html
@@ -37,6 +37,13 @@
 
 <!-- CSS for Image Gallery interaction -->
 <style>
+    body{
+        /*font-family: 'BlinkMacSystemFont';*/
+        /*font-family: -apple-system, "Helvetica Neue", "Lucida Grande";*/
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+
+    }
+
     .photogallery {
         transition: all 0.4s ease;
     }
